--- a/src/components/alg/alg-conspect/ftl/pages/elem-f2.html
+++ b/src/components/alg/alg-conspect/ftl/pages/elem-f2.html
@@ -10,7 +10,7 @@
 <article class="article">
   <h3>Содержание</h3>
 
-  <br><a href="#p2">Занятие 2. Установка CodeBlocks</a>
+  <a href="#p2">Занятие 2. Установка CodeBlocks</a>
 </article>
 
 
