--- a/src/components/alg/alg-conspect/ftl/pages/elem-f3.html
+++ b/src/components/alg/alg-conspect/ftl/pages/elem-f3.html
@@ -10,7 +10,7 @@
 <article class="article">
   <h3>Содержание</h3>
 
-  <br><a href="#p3">Занятие 3. Целочисленное деление</a>
+  <a href="#p3">Занятие 3. Целочисленное деление</a>
 </article>
 
 
