--- a/src/components/alg/alg-conspect/ftl/pages/elem-f4.html
+++ b/src/components/alg/alg-conspect/ftl/pages/elem-f4.html
@@ -10,7 +10,7 @@
 <article class="article">
   <h3>Содержание</h3>
 
-  <br><a href="#p4">Занятие 4. Математический разбор целочисленного деления с округлением вверх, решение арифметических задач</a>
+  <a href="#p4">Занятие 4. Математический разбор целочисленного деления с округлением вверх, решение арифметических задач</a>
 </article>
 
 
