--- a/src/components/alg/alg-conspect/misis/pages/elem-m2.html
+++ b/src/components/alg/alg-conspect/misis/pages/elem-m2.html
@@ -37,7 +37,7 @@
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/A" target="_blank">https://contest.misis.ru/contest/1081/problems/A</a></p>
 
-  <p>Время 2с. Память 16мб.</p>
+  <div class="time-memory">(Время 2с. Память 16мб.)</div>
 
   <p>Одна из основных операций с числами - их сравнение. Мы подозреваем, что вы в совершенстве владеете этой операцией и можете сравнивать любые числа, в том числе и целые. В данной задаче необходимо сравнить два целых числа.</p>
 
@@ -96,7 +96,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/B" target="_blank">https://contest.misis.ru/contest/1081/problems/B</a></p>
 
-  <p>Время 1с. Память 16 мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>Белочка собрала в лесу N шишек с орешками. Белочка очень привередливо выбирала шишки, и брала только те, в которых ровно M орешков. Также известно, что для пропитания зимой ей необходимо не менее K орешков. Определите, хватит ли на зиму орешков белочке.</p>
 
@@ -150,7 +150,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/C" target="_blank">https://contest.misis.ru/contest/1081/problems/C</a></p>
 
-  <p>Время 1с. Память 16 мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>Маша и Миша собрали землянику. Маше удалось собрать X ягод, а Мише - Y ягод. Поскольку ягода была очень вкусной, то ребята могли какую-то часть ягод съесть. По нашим подсчетам вместе они съели Z ягод.</p>
   <p>Требуется определить: сколько ягод ребята собрали в результате, при этом следует проверить, не ошиблись ли мы в расчетах, подсчитывая количество съеденных ягод (их не должно было получиться больше, чем сорванных ягод).</p>
@@ -205,7 +205,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/D" target="_blank">https://contest.misis.ru/contest/1081/problems/D</a></p>
 
-  <p>Время 1с. Память 16 мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>Всем извествно, что от перестановки слагаемых сумма не изменяется. Однако, случается и так, что перестановка двух чисел приводит к более интересным последствиям.</p>
   <p>Пусть, например, заданы три числа a1, a2, a3. Рассмотрим равенство a1 + a2 = a3. Оно может быть неверным (например, если a1 = 1, a2 = 4, a3 = 3), однако может стать верным, если поменять некоторые числа местами (например, если поменять местами a2 и a3, оно обратится в равенство 1 + 3 = 4).</p>
@@ -243,11 +243,11 @@ int main() {
   int a1, a2, a3;
   cin >> a1 >> a2 >> a3;
 
-  if (a1 + a2 &lt; a3) {
+  if (a1 + a2 == a3) {
     cout &lt;&lt; "YES";
-  } else if (a1 + a3 &lt; a2) {
+  } else if (a1 + a3 == a2) {
     cout &lt;&lt; "YES";
-  } else if (a2 + a3 &lt; a1) {
+  } else if (a2 + a3 == a1) {
     cout &lt;&lt; "YES";
   } else {
     cout &lt;&lt; "NO";
@@ -265,7 +265,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/E" target="_blank">https://contest.misis.ru/contest/1081/problems/E</a></p>
 
-  <p>Время 1с. Память 16 мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>Однажды компьютерная мышка подумала, что стоит взять про запас еще один коврик. Чтобы никто не заметил запасного коврика, мышка решила его спрятать под свой прямоугольный коврик. Пробравшись ночью на склад, мышка обнаружила там только круглые коврики. Удастся ли мышке спрятать круглый коврик под прямоугольным ковриком?</p>
 
@@ -315,7 +315,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/F" target="_blank">https://contest.misis.ru/contest/1081/problems/F</a></p>
 
-  <p>Время 1с. Память 16 мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>Недавно на поле фермера Джона были обнаружены следы приземления летающих тарелок. Об этом даже писала газета Mew Yorc Courier.</p>
 
@@ -351,7 +351,7 @@ int main() {
   int r1, r2, r3;
   cin >> r1 >> r2 >> r3;
 
-  if (r3 >= r1 + r2) {
+  if (r1 >= r2 + r3) {
     cout &lt;&lt; "YES";
   } else {
     cout &lt;&lt; "NO";
@@ -369,7 +369,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/G" target="_blank">https://contest.misis.ru/contest/1081/problems/G</a></p>
 
-  <p>Время 0.5с. Память 256 мб.</p>
+  <div class="time-memory">(Время 0.5с. Память 256мб.)</div>
 
   <p>Петя стоит в шеренге из n  человек, но точно не знает на какой позиции. Он может сказать, что перед ним стоит не менее a человек, а после него - не более b человек. Найдите количество позиций, на которых может стоять Петя.</p>
 
