--- a/src/components/alg/alg-conspect/misis/pages/elem-m3.html
+++ b/src/components/alg/alg-conspect/misis/pages/elem-m3.html
@@ -38,7 +38,7 @@
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/A" target="_blank">https://contest.misis.ru/contest/1081/problems/A</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>n школьников делят k яблок поровну, неделящийся остаток остается в корзине. Сколько яблок достанется каждому школьнику? Сколько яблок останется в корзине?</p>
 
@@ -80,7 +80,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/B" target="_blank">https://contest.misis.ru/contest/1081/problems/B</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Дано натуральное число. Выведите его последнюю цифру.</p>
 
@@ -122,7 +122,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/C" target="_blank">https://contest.misis.ru/contest/1081/problems/C</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Дано трехзначное число. Найдите сумму его цифр.</p>
 
@@ -164,7 +164,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/D" target="_blank">https://contest.misis.ru/contest/1081/problems/D</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>С начала суток прошло n минут. Определите, сколько часов и минут будут показывать электронные часы в этот момент. Программа должна вывести два числа: количество часов (от 0 до 23) и количество минут (от 0 до 59).</p>
 
@@ -213,7 +213,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/E" target="_blank">https://contest.misis.ru/contest/1081/problems/E</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Пирожок в столовой стоит a рублей и b копеек. Определите, сколько рублей и копеек нужно заплатить за n пирожков.</p>
 
@@ -261,7 +261,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/F" target="_blank">https://contest.misis.ru/contest/1081/problems/F</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Даны два натуральных числа n и m. Если одно из них делится на другое нацело, выведите 1, иначе выведите любое другое целое число. Требуется решить задачу, не используя оператор if.</p>
 
@@ -303,7 +303,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/G" target="_blank">https://contest.misis.ru/contest/1081/problems/G</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Напишите программу, которая считывает два целых числа a и b и выводит наибольшее значение из них. Числа - целые от 1 до 1000.</p>
 
@@ -351,7 +351,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/H" target="_blank">https://contest.misis.ru/contest/1081/problems/H</a></p>
 
-  <p>Время 1с. Память 64мб.</p>
+  <div class="time-memory">(Время 1с. Память 64мб.)</div>
 
   <p>Вам дается вещественное число X. Требуется вывести X/2.</p>
 
