--- a/src/components/alg/alg-conspect/misis/pages/elem-m4.html
+++ b/src/components/alg/alg-conspect/misis/pages/elem-m4.html
@@ -41,7 +41,7 @@
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/A" target="_blank">https://contest.misis.ru/contest/1081/problems/A</a></p>
 
-  <p>Время 1с. Память 16мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>Вам дана последовательность чисел длины n. Найдите самое большое и самое маленькое числа в последовательности.</p>
 
@@ -100,7 +100,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/B" target="_blank">https://contest.misis.ru/contest/1081/problems/B</a></p>
 
-  <p>Время 1с. Память 16мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>В доме живет N жильцов. Однажды решили провести перепись всех жильцов данного дома и составили список, в котором указали возраст и пол каждого жильца. Требуется найти номер самого старшего жителя мужского пола.</p>
 
@@ -146,7 +146,6 @@ int main() {
         max = v;
         res = i;
       }
-      min = in;
     }
   }
 
@@ -164,7 +163,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/C" target="_blank">https://contest.misis.ru/contest/1081/problems/C</a></p>
 
-  <p>Время 1с. Память 16мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>На столе лежат n монеток. Некоторые из них лежат вверх решкой, а некоторые - гербом. Определите минимальное число монеток, которые нужно перевернуть, чтобы все монетки были повернуты вверх одной и той же стороной.</p>
 
@@ -230,7 +229,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/D" target="_blank">https://contest.misis.ru/contest/1081/problems/D</a></p>
 
-  <p>Время 1с. Память 16мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>Дано несколько чисел. Подсчитайте, сколько из них равны нулю, и выведите это количество.</p>
 
@@ -289,7 +288,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/E" target="_blank">https://contest.misis.ru/contest/1081/problems/E</a></p>
 
-  <p>Время 1с. Память 16мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>Даны два целых числа A и B. Выведите все числа от A до B включительно в порядке возрастания, если A &lt; B, или в порядке убывания в противном случае.</p>
 
@@ -333,7 +332,7 @@ int main() {
     }
   } else {
     for (int i = a; i &lt;= b; i++) {
-      cout &lt;&lt; i &lt;&lt; ' '';
+      cout &lt;&lt; i &lt;&lt; ' ';
     }
   }
 }
@@ -349,7 +348,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/F" target="_blank">https://contest.misis.ru/contest/1081/problems/F</a></p>
 
-  <p>Время 1с. Память 16мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>По данному целому числу N распечатайте все квадраты натуральных чисел, не превосходящие N, в порядке возрастания.</p>
 
@@ -395,7 +394,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/G" target="_blank">https://contest.misis.ru/contest/1081/problems/G</a></p>
 
-  <p>Время 1с. Память 16мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>По данному натуральному числу выведите все его натуральные делители в порядке возрастания.</p>
 
@@ -441,7 +440,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/H" target="_blank">https://contest.misis.ru/contest/1081/problems/H</a></p>
 
-  <p>Время 1с. Память 16мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>Дано натуральное число N. Выведите слово YES, если число N является степенью двойки, или слово NO в противном случае.</p>
 
@@ -499,7 +498,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1081/problems/I" target="_blank">https://contest.misis.ru/contest/1081/problems/I</a></p>
 
-  <p>Время 1с. Память 16мб.</p>
+  <div class="time-memory">(Время 1с. Память 16мб.)</div>
 
   <p>Определите среднее значение всех элементов последовательности, завершающейся числом 0. Сам ноль в последовательность не входит.</p>
 
