--- a/src/components/alg/alg-conspect/misis/pages/elem-m6.html
+++ b/src/components/alg/alg-conspect/misis/pages/elem-m6.html
@@ -77,7 +77,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1155/problems/A" target="_blank">https://contest.misis.ru/contest/1155/problems/A</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Выведите все нечетные числа от 1 до N.</p>
 
@@ -125,7 +125,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1155/problems/B" target="_blank">https://contest.misis.ru/contest/1155/problems/B</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Дано число N. Вывести все четные числа от 1 до N.</p>
 
@@ -173,7 +173,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1155/problems/C" target="_blank">https://contest.misis.ru/contest/1155/problems/C</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Даны числа N и K. Выведите все числа от 0 до N, которые делятся на K, не используя if. Помните, что 0 делится на любое число.</p>
 
@@ -221,7 +221,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1155/problems/D" target="_blank">https://contest.misis.ru/contest/1155/problems/D</a></p>
 
-  <p>Время 1с. Память 64мб.</p>
+  <div class="time-memory">(Время 1с. Память 64мб.)</div>
 
   <p>Мальчик Петя собрался на День Рождения к своей подруге Ане. У Пети есть число n, а так же Кодекс Чести его Страны, руководствоваться которым должен каждый мальчик Страны, когда хочет сделать подарок своей подруге. Кодекс Чести говорит о том, что если у мальчика есть число n тогда он должен подарить своей подруге его минимальный делитель. Однако, Кодекс Чести также говорит о том, что лучше не дарить ничего, чем подарить число 1 или число n. Помогите Пете узнать, какое число он должен подарить Ане, чтобы он успел сделать для него красивую упаковку.</p>
 
@@ -279,7 +279,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1155/problems/E" target="_blank">https://contest.misis.ru/contest/1155/problems/E</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>"Я пригласил вас, господа, с тем, чтобы сообщить вам пренепреятное известие: к нам едет число N".</p>
 
@@ -332,7 +332,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1155/problems/F" target="_blank">https://contest.misis.ru/contest/1155/problems/F</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Подсчитайте количество натуральных делителей числа x включая 1 и само число.</p>
 
@@ -366,7 +366,7 @@ int main() {
 
   int cnt = 0;
   for (int i = 1; i &lt;= x; i++) {
-    if (n % i == 0) {
+    if (x % i == 0) {
       cnt++;
     }
   }
@@ -385,7 +385,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1155/problems/A" target="_blank">https://contest.misis.ru/contest/1155/problems/A</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>По данному числу N распечатайте все целые степени двойки, не превосходящие N, в порядке возрастания.</p>
 
@@ -435,7 +435,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1155/problems/B" target="_blank">https://contest.misis.ru/contest/1155/problems/B</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Вывести все четные числа от n до 1. Нельзя использовать if.</p>
 
@@ -483,7 +483,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1155/problems/C" target="_blank">https://contest.misis.ru/contest/1155/problems/C</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Девочка Катя решила купить бусы в подарок своей подруге Свете. У Кати есть n рублей. Оказалось, что в магазине за a рублей можно купить бусы из a² бусин. Помогите Кате сделать выбор! Определите все возможные варианты бус, которые она может себе позволить.</p>
 
@@ -531,7 +531,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1155/problems/D" target="_blank">https://contest.misis.ru/contest/1155/problems/D</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Девочке Алене ее двоюродная бабушка-ведьма подарила сапоги скороходы. Сапоги устроены следующим образом: перед тем, как надеть их, надо загадать число a и прыгнуть на один метр в ту сторону, куда собираешься отправиться. После этого каждый i-ый шаг получается длиной a<sup>i</sup> метров. Алена загадала число a и отправилась гулять. Определите, на каком расстоянии от дома она окажется через n шагов.</p>
 
@@ -546,10 +546,6 @@ int main() {
     <h4>Пример 1</h4>
     <code>2 5</code>
     <code>63</code>
-
-    <h4>Пример 2</h4>
-    <code>8</code>
-    <code>1 4 9 16 25 36 49 64</code>
   </details>
 
   <details>
@@ -584,7 +580,7 @@ int main() {
 
   <p><a href="https://contest.misis.ru/contest/1155/problems/E" target="_blank">https://contest.misis.ru/contest/1155/problems/E</a></p>
 
-  <p>Время 1с. Память 256мб.</p>
+  <div class="time-memory">(Время 1с. Память 256мб.)</div>
 
   <p>Даны целые неотрицательные числа a, b, c, d, при этом 0 ≤ c &lt; d. Выведите в порядке возрастания все числа от a до b, которые дают остаток c при делении на d.</p>
 
