--- a/src/components/alg/alg-ta/ta4/pages/elem-l3.html
+++ b/src/components/alg/alg-ta/ta4/pages/elem-l3.html
@@ -3,7 +3,7 @@
 
 <article class="article">
   <h2>Михаил Густокашин</h2>
-  <p>Конспект курса <strong>Тренировки по алгоритмам 4.0</strong> (с 2023-11-01 до 2023.11.18)</p>
+  <p>Конспект курса <strong>Тренировки по алгоритмам 4.0</strong> (с 2023.11.01 до 2023.11.18)</p>
 
   <h4>Лекция 3 Кратчайшие пути во взвешенных графах</h4>
   <p><a href="https://yandex.ru/yaintern/algorithm-training_2021">yandex.ru/yaintern/algorithm-training_2021</a></p>
