--- a/src/components/alg/alg-ta/ta6/pages/elem-r4.html
+++ b/src/components/alg/alg-ta/ta6/pages/elem-r4.html
@@ -3,7 +3,7 @@
 
 <article class="article">
   <h2>Михаил Густокашин</h2>
-  <p>Конспект курса <strong>Тренировки по алгоритмам 6.0</strong> (с 2024-10-24 до 2024.11.28)</p>
+  <p>Конспект курса <strong>Тренировки по алгоритмам 6.0</strong> (с 2024.10.24 до 2024.11.28)</p>
 
   <h4>Разбор ДЗ по лекции 4</h4>
   <p><a href="https://yandex.ru/yaintern/algorithm-training_2021">yandex.ru/yaintern/algorithm-training_2021</a></p>
