--- a/src/components/code/code-c/c-base/pages/elem-clib.html
+++ b/src/components/code/code-c/c-base/pages/elem-clib.html
@@ -3,7 +3,7 @@
 
 <!-- Содержание -->
 <article class="article">
-  <h2>Содержание</h2>
+  <h3>Содержание</h3>
 
   <p><a href="#lib">Стандартные библиотеки языка Си</a></p>
 
@@ -773,24 +773,24 @@ typedef struct _iobuf FILE;
   <h4>Основные функции</h4>
 
   <ol>
-    <li>Функция <strong>int abs(x)</strong> возвращает абсолютное значение переменной <strong>int x</strong></li>
-    <li>Функция <strong>intmax_t imaxabs(x)</strong> возвращает абсолютное значение переменной <strong>intmax_t x</strong></li>
-    <li>Функция fabs(x) возвращает модуль x.</li>
-    <li>Функция exp(x) возвращает значение e (основание натурального логарифма) в степени x.</li>
-    <li>Функция log(x) возвращает натуральный логарифма переменной x.</li>
-    <li>Функция log10(x) возвращает десятичный логарифма переменной x.</li>
-    <li>Функция pow(x, y) возвращает x в степени y.</li>
-    <li>Функция sqrt(x) возвращает квадратный корень из x.</li>
-    <li>Функция ldexp(x, n) возвращает x умноженное на 2 и возведенное в степень n.</li>
-    <li>Функция frexp(x, int* exp) разбивает x на две части - возвращает мантиссу (от 0.5 до 1) и сохраняет экспоненту в exp</li>
-    <li>Функция modf(x, double* ip) разбивает x на целую и дробную части - возвращает дробную часть и сохраняет целую в ip</li>
-    <li>Функция fmod(x, y) возвращает остаток от деления x на y.</li>
-    <li>Функция div(x, y) возвращает структуру из двух полей: quot (результат целочисленного деления x / y), rem (остаток от деления x % y).</li>
-    <li>Функция imaxdiv(x, y) возвращает структуру из двух полей: quot (результат целочисленного деления x / y), rem (остаток от деления x % y).</li>
-    <li>Функция __max(x, y) возвращает максимальное значение</li>
-    <li>Функция fmax(x, y) возвращает максимальное значение</li>
-    <li>Функция __min(x, y) возвращает минимальное значение</li>
-    <li>Функция fmin(x, y) возвращает минимальное значение</li>
+    <li><strong>int abs(x)</strong> возвращает абсолютное значение переменной <strong>int x</strong></li>
+    <li><strong>intmax_t imaxabs(x)</strong> возвращает абсолютное значение переменной <strong>intmax_t x</strong></li>
+    <li><strong>fabs(x)</strong> возвращает модуль x.</li>
+    <li><strong>exp(x)</strong> возвращает значение e (основание натурального логарифма) в степени x.</li>
+    <li><strong>log(x)</strong> возвращает натуральный логарифма переменной x.</li>
+    <li><strong>log10(x)</strong> возвращает десятичный логарифма переменной x.</li>
+    <li><strong>pow(x, y)</strong> возвращает x в степени y.</li>
+    <li><strong>sqrt(x)</strong> возвращает квадратный корень из x.</li>
+    <li><strong>ldexp(x, n)</strong> возвращает x умноженное на 2 и возведенное в степень n.</li>
+    <li><strong>frexp(x, int* exp)</strong> разбивает x на две части - возвращает мантиссу (от 0.5 до 1) и сохраняет экспоненту в exp</li>
+    <li><strong>modf(x, double* ip)</strong> разбивает x на целую и дробную части - возвращает дробную часть и сохраняет целую в ip</li>
+    <li><strong>fmod(x, y)</strong> возвращает остаток от деления x на y.</li>
+    <li><strong>div(x, y)</strong> возвращает структуру из двух полей: quot (результат целочисленного деления x / y), rem (остаток от деления x % y).</li>
+    <li><strong>imaxdiv(x, y)</strong> возвращает структуру из двух полей: quot (результат целочисленного деления x / y), rem (остаток от деления x % y).</li>
+    <li><strong>__max(x, y)</strong> возвращает максимальное значение</li>
+    <li><strong>fmax(x, y)</strong> возвращает максимальное значение</li>
+    <li><strong>__min(x, y)</strong> возвращает минимальное значение</li>
+    <li><strong>fmin(x, y)</strong> возвращает минимальное значение</li>
   </ol>
 
   <h4>Округление чисел</h4>
