--- a/src/components/alg/alg-ta/ta3/pages/elem-l0.html
+++ b/src/components/alg/alg-ta/ta3/pages/elem-l0.html
@@ -3,7 +3,7 @@
 
 <article class="article">
   <h2>Михаил Густокашин</h2>
-  <p>Конспект курса <strong>Тренировки по алгоритмам 3.0</strong> (с 2023-02-09 до 2023.03.10)</p>
+  <p>Конспект курса <strong>Тренировки по алгоритмам 3.0</strong> (с 2023.02.09 до 2023.03.10)</p>
 
   <h4>Как и зачем изучать алгоритмы</h4>
   <p><a href="https://yandex.ru/yaintern/algorithm-training_2021">yandex.ru/yaintern/algorithm-training_2021</a></p>
