--- a/src/components/alg/alg-ta/ta5/pages/elem-r4.html
+++ b/src/components/alg/alg-ta/ta5/pages/elem-r4.html
@@ -3,7 +3,7 @@
 
 <article class="article">
   <h2>Михаил Густокашин</h2>
-  <p>Конспект курса <strong>Тренировки по алгоритмам 5.0</strong> (с 2024-03-01 до 2024.03.29)</p>
+  <p>Конспект курса <strong>Тренировки по алгоритмам 5.0</strong> (с 2024.03.01 до 2024.03.29)</p>
 
   <h4>Разбор ДЗ по лекции 4</h4>
   <p><a href="https://yandex.ru/yaintern/algorithm-training_2021">yandex.ru/yaintern/algorithm-training_2021</a></p>
