--- a/src/components/alg/alg-ta/ta1/pages/elem-l1.html
+++ b/src/components/alg/alg-ta/ta1/pages/elem-l1.html
@@ -6,8 +6,8 @@
   <p>Конспект курса <strong>Тренировки по алгоритмам 1.0</strong> (с 2021.06.02 до 2021.06.30)</p>
 
   <h4>Лекция 1. Сложность, тестирование, особые случаи</h4>
-  <p><a href="https://yandex.ru/yaintern/algorithm-training_2021">yandex.ru/yaintern/algorithm-training_2021</a></p>
-  <p><a href="https://contest.yandex.ru/contest/27393/problems/">Задачи</a></p>
+  <p><a href="https://yandex.ru/yaintern/algorithm-training_2021" target="_blank">yandex.ru/yaintern/algorithm-training_2021</a></p>
+  <p><a href="https://contest.yandex.ru/contest/27393/problems" target="_blank">contest.yandex.ru/contest/27393/problems/</a></p>
   <p>2021-06-02 Лекция 1 Сложность, тестирование, особые случаи.mp4</p>
 </article>
 
