--- a/src/components/alg/alg-ta/ta2/pages/elem-l1.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l1.html
@@ -6,8 +6,7 @@
   <p>Конспект курса <strong>Тренировки по алгоритмам 2.0</strong> (с 2021.08.31 до 2021.10.01)</p>
 
   <h4>Вводный вебинар</h4>
-  <p><a href="https://yandex.ru/yaintern/algorithm-training_2021">yandex.ru/yaintern/algorithm-training_2021</a></p>
-  <p><a href="https://contest.yandex.ru/contest/27393/problems/">Задачи</a></p>
+  <p><a href="https://yandex.ru/yaintern/algorithm-training_june_2021" target="_blank">yandex.ru/yaintern/algorithm-training_june_2021</a></p>
   <p>2021-08-31 Вводный вебинар.mp4</p>
 </article>
 
