--- a/src/components/alg/alg-ta/ta1/pages/elem-l3dz.html
+++ b/src/components/alg/alg-ta/ta1/pages/elem-l3dz.html
@@ -4,9 +4,9 @@
 <article class="article">
   <h2>Михаил Густокашин</h2>
   <p>Конспект курса <strong>Тренировки по алгоритмам 1.0</strong> (с 2021.06.02 до 2021.06.30)</p>
+  <p><a href="https://yandex.ru/yaintern/algorithm-training_2021" target="_blank">yandex.ru/yaintern/algorithm-training_2021</a></p>
 
   <h4>Домашнее задание по лекции 3. Множества</h4>
-  <p><a href="https://yandex.ru/yaintern/algorithm-training_2021" target="_blank">yandex.ru/yaintern/algorithm-training_2021</a></p>
   <p><a href="https://contest.yandex.ru/contest/27663/problems" target="_blank">contest.yandex.ru/contest/27663/problems/</a></p>
 </article>
 
@@ -20,6 +20,11 @@
   <br><a href="#t3">C. Кубики</a>
   <br><a href="#t4">D. Количество слов в тексте</a>
   <br><a href="#t5">E. OpenCalculator</a>
+  <br><a href="#t6">F. Инопланетный геном</a>
+  <br><a href="#t7">G. Черепахи</a>
+  <br><a href="#t8">H. Злые свинки</a>
+  <br><a href="#t9">I. Полиглоты</a>
+  <br><a href="#t10">J. Пробежки по Манхэттену</a>
 </article>
 
 
@@ -230,5 +235,256 @@ I'm sure that the shells are sea shore shells.
     <p>2. Нужно добавить кнопку 0.</p>
 
     <p>3. Нужно добавить кнопки 1 и 2.</p>
+  </details>
+</article>
+
+
+<!-- F. Инопланетный геном -->
+<article class="article">
+  <div class="anchor" id="t6"></div>
+  <h3>F. Инопланетный геном</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Геном жителей системы Тау Кита содержит 26 видов оснований, для обозначения которых будем использовать буквы латинского алфавита от A до Z, а сам геном записывается строкой из латинских букв. Важную роль в геноме играют пары соседних оснований, например, в геноме «ABBACAB» можно выделить следующие пары оснований: AB, BB, BA, AC, CA, AB.</p>
+
+  <p>Степенью близости одного генома другому геному называется количество пар соседних оснований первого генома, которые встречаются во втором геноме.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Вам даны два генома, определите степень близости первого генома второму геному. Программа получает на вход две строки, состоящие из заглавных латинских букв. Каждая строка непустая, и её длина не превосходит 10<sup>5</sup>.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Программа должна вывести одно целое число – степень близости генома, записанного в первой строке, геному, записанному во второй строке.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+ABBACAB
+BCABB
+</pre>
+    <code>4</code>
+    <p>Следующие пары оснований первого генома встречаются во втором геноме: AB, BB, CA, AB. Обратите внимание на то, что пара AB в первом геноме встречается два раза, поэтому и подсчитана в ответе два раза.</p>
+
+    <p>Система оценивания:</p>
+
+    <p>Решение, правильно работающее только для случаев, когда длины данных строк не превосходят 100, будет оцениваться в 60 баллов.</p>
+  </details>
+</article>
+
+
+<!-- G. Черепахи -->
+<article class="article">
+  <div class="anchor" id="t7"></div>
+  <h3>G. Черепахи</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Широко известна следующая задача для младших школьников. Три черепахи ползут по дороге. Одна черепаха говорит: “Впереди меня две черепахи”. Другая черепаха говорит: “Позади меня две черепахи”. Третья черепаха говорит: “Впереди меня две черепахи и позади меня две черепахи”. Как такое может быть? Ответ: третья черепаха врет! По дороге одна за другой движутся N черепах. Каждая черепаха говорит фразу вида: “Впереди меня ai черепах, а позади меня bi черепах”. Ваша задача определить, сколько самое большее количество черепах могут говорить правду.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке вводится целое число N (1 ≤ N ≤ 10000) строк, содержащих целые числа ai и bi, по модулю не превосходящие 10000, описывающие высказывание i-ой черепахи.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите целое число M – максимальное количество черепах, которые могут говорить правду.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+2 0
+0 2
+2 2
+</pre>
+    <code>2</code>
+
+    <h4>Пример 2</h4>
+<pre>
+5
+0 4
+1 3
+2 2
+3 1
+4 0
+</pre>
+    <code>5</code>
+
+    <h4>Пример 3</h4>
+<pre>
+10
+9 1
+8 1
+7 2
+6 2
+5 3
+4 4
+3 6
+2 7
+1 9
+0 8
+</pre>
+    <code>4</code>
+  </details>
+</article>
+
+
+<!-- H. Злые свинки -->
+<article class="article">
+  <div class="anchor" id="t8"></div>
+  <h3>H. Злые свинки</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Вы никогда не задумывались, почему в Angry Birds у птиц нет крыльев? Тем же вопросом задались разработчики новой игры. В их версии смысл игры прямо противоположен Angry Birds: зеленая свинка стреляет по злым птицам из лазерного ружья (завязка явно не хуже исходной игры).</p>
+
+  <p>Птицы в игре представляются точками на плоскости. Выстрел сбивает только ближайшую птицу находящуюся на линии огня. При этом сбитая птица падая сбивает всех птиц, находящихся ровно под ней. Две птицы не могут находиться в одной точке. По заданному расположению птиц необходимо определить, какое минимальное количество выстрелов необходимо, чтобы все птицы были сбиты.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Первая строка входного файла содержит единственное целое число N (1 ≤ N ≤ 1000) — количество птиц.</p>
+
+  <p>Следующие N строк содержат по два натуральных числа каждая xi, yi — координаты i-ой птицы (0 &lt; x, y ≤ 10<sup>9</sup>). Свинка находится в точке с координатами (0, 0).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Единственная строка выходного файла должна содержать одно целое число — минимальное количество выстрелов, необходимое для того, чтобы сбить всех птиц.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+6
+1 1
+2 2
+3 3
+2 1
+3 2
+3 1
+</pre>
+    <code>3</code>
+
+    <h4>Пример 2</h4>
+<pre>
+6
+1 1
+2 2
+3 3
+2 1
+3 2
+3 4
+</pre>
+    <code>3</code>
+  </details>
+</article>
+
+
+<!-- I. Полиглоты -->
+<article class="article">
+  <div class="anchor" id="t9"></div>
+  <h3>I. Полиглоты</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Каждый из N школьников некоторой школы знает Mi языков. Определите, какие языки знают все школьники и языки, которые знает хотя бы один из школьников.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Первая строка входных данных содержит количество школьников N. Далее идет N чисел Mi, после каждого из чисел идет Mi строк, содержащих названия языков, которые знает i-й школьник. Длина названий языков не превышает 1000 символов, количество различных языков не более 1000. 1 ≤ N ≤ 1000, 1 ≤ M i ≤ 500.</p>
+
+  <h4>Формат вывода</h4>
+  <p>В первой строке выведите количество языков, которые знают все школьники. Начиная со второй строки - список таких языков. Затем - количество языков, которые знает хотя бы один школьник, на следующих строках - список таких языков.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+3
+Russian
+English
+Japanese
+2
+Russian
+English
+1
+English
+</pre>
+<pre>
+1
+English
+3
+Russian
+Japanese
+English
+</pre>
+  </details>
+</article>
+
+
+<!-- J. Пробежки по Манхэттену -->
+<article class="article">
+  <div class="anchor" id="t10"></div>
+  <h3>J. Пробежки по Манхэттену</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Дороги Нью-Манхэттена устроены следующим образом. С юга на север через каждые сто метров проходит авеню, с запада на восток через каждые сто метров проходит улица. Авеню и улицы нумеруются целыми числами. Меньшие номера соответствуют западным авеню и южным улицам. Таким образом, можно построить прямоугольную систему координат так, чтобы точка (x, y) лежала на пересечении x-ой авеню и y-ой улицы. Легко заметить, что для того, чтобы в Нью-Манхэттене дойти от точки (x1, y1) до точки (x2, y2) нужно пройти |x2 - x1| + |y2 - y1| кварталов. Эта величина называется манхэттенским расстоянием между точками (x1, y1) и (x2, y2).</p>
+
+  <p>Миша живет в Нью-Манхэттене и каждое утро делает пробежку по городу. Он выбегает из своего дома, который находится в точке (0, 0) и бежит по случайному маршруту. Каждую минуту Миша либо остается на том же перекрестке, что и минуту назад, или перемещается на один квартал в любом направлении. Чтобы не заблудиться Миша берет с собой навигатор, который каждые t минут говорит Мише, в какой точке он находится. К сожалению, навигатор показывает не точное положение Миши, он может показать любую из точек, манхэттенское расстояние от которых до Миши не превышает d.</p>
+
+  <p>Через t x n минут от начала пробежки, получив n-е сообщение от навигатора, Миша решил, что пора бежать домой. Для этого он хочет понять, в каких точках он может находиться. Помогите Мише сделать это.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Первая строка входного файла содержит числа t, d и n (1 ≤ t ≤ 100, 1 ≤ d ≤ 100, 1 ≤ n ≤ 100).</p>
+
+  <p>Далее n строк описывают данные, полученные от навигатора. Строка номер i содержит числа xi и yi — данные, полученные от навигатора через ti минут от начала пробежки.</p>
+
+  <h4>Формат вывода</h4>
+  <p>В первой строке выходного файла выведите число m — число точек, в которых может находиться Миша. Далее выведите m пар чисел — координаты точек. Точки можно вывести в произвольном порядке.</p>
+
+  <p>Гарантируется, что навигатор исправен и что существует по крайней мере одна точка, в которой может находиться Миша.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+2 1 5
+0 1
+-2 1
+-2 3
+0 3
+2 5
+</pre>
+<pre>
+2
+1 5
+2 4
+</pre>
+
+    <h4>Пример 2</h4>
+<pre>
+1 1 1
+0 0
+</pre>
+<pre>
+5
+-1 0
+0 -1
+0 0
+0 1
+1 0
+</pre>
+
+    <h4>Пример 3</h4>
+<pre>
+1 10 1
+0 0
+</pre>
+<pre>
+5
+-1 0
+0 -1
+0 0
+0 1
+1 0
+</pre>
   </details>
 </article>
